# sdd-navigator

./: .ansible-lint  .env.example  .gitignore  Makefile  REQUIREMENTS.md  docker-compose.yml  versions.yaml
.github/workflows/: validate.yml
ansible/: ansible.cfg  run-playbook.sh
ansible/group_vars/: all.yml
ansible/host_vars/: notebook.yml
ansible/playbooks/: 00-preparation.yml  01-install-docker.yml  02-install-k3s.yml  03-install-helm.yml  04-build-images.yml  05-deploy-app.yml  deploy-app.yml  deploy-k3s.yml  site.yml
app/api/: .env.example  Cargo.toml  Dockerfile
app/api/src/: health.rs  main.rs
app/web/: Dockerfile  next.config.js  package.json  tsconfig.tsbuildinfo
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/app/api/health/: route.ts
helm/sdd-navigator/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml
helm/sdd-navigator/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  namespace.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  web-deployment.yaml  web-ingress.yaml  web-service.yaml
helm/sdd-navigator/templates/api/: configmap.yaml  deployment.yaml  service.yaml
helm/sdd-navigator/templates/networking/: allow-api-to-postgres.yaml  allow-dns.yaml  allow-ingress-to-web.yaml  allow-web-to-api.yaml  deny-all-ingress.yaml
helm/sdd-navigator/templates/postgres/: configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
helm/sdd-navigator/templates/web/: deployment.yaml  ingress.yaml  service.yaml
scripts/: check_traceability.sh  test_api.sh
