[package]
name = "sdd-navigator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["runtime-actix-native-tls", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
